--- a/ng-admin/src/app/home/home.component.html
+++ b/ng-admin/src/app/home/home.component.html
@@ -1,57 +1,12 @@
-<page-header>
-  <ng-template #content>
-    <div class="page-header">
-      <div class="avatar" style="text-align: center">
-        <!-- https://upload-images.jianshu.io/upload_images/1979022-b6bb0a2dad6c7f3d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240 -->
-
-        <img class="img" src=" https://upload-images.jianshu.io/upload_images/1979022-b6bb0a2dad6c7f3d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240"
-          width="100px" height="100px">
-        <!-- <img class="img" src="https://mp.weixin.qq.com/rr?timestamp=1532171705&src=3&ver=1&signature=Mr7jG2uBte-*FqiCN9-yVKRU-YZWVWKfpioWBN2d7waS1kpnma3ffiERhirb0xbfAtqOIkNsFY*5b1pgcRTfRgb7arw5gX1uwgI4QfAIiJg="
-          width="100px" height="100px"> -->
-        <span>微信扫一扫关注</span>
-      </div>
-      <div class="desc">
-        <div class="desc-title">有事没事就请访问
-          <a href="//www.52abp.com" target="_blank">52ABP社区</a>
-        </div>
-        <div>假砖家 | 我们是一群业余的搞一个专业的事情。</div>
-        <div> 点击加入交流QQ群：
-          <a href="https://jq.qq.com/?_wv=1027&k=5He28dh">633751348 【52ABP .NET CORE 实战群】</a>
-
-        </div>
-
-      </div>
-    </div>
-  </ng-template>
-  <ng-template #extra>
-    <div class="page-extra">
-      <div>
-        <p>项目数</p>
-        <p>56</p>
-      </div>
-      <div>
-        <p>团队内排名</p>
-        <p>8
-          <span> / 24</span>
-        </p>
-      </div>
-      <div>
-        <p>项目访问</p>
-        <p>2,223</p>
-      </div>
-    </div>
-  </ng-template>
-
-</page-header>
-
-
+<!-- <page-header>
+</page-header> -->
 <!-- 演示卡片数据 -->
 <div nz-row nzGutter="16">
   <div nz-col nzXs="24" nzSm="12" nzMd="6" class="mb-md">
     <div nz-row nzType="flex" nzAlign="middle" class="bg-primary rounded-md">
       <div nz-col nzSpan="12" class="p-md text-white">
-        <div class="h2 mt0">123,456</div>
-        <p class="text-nowrap mb0">Website Traffics</p>
+        <div class="h2 mt0">{{homeInfo.total}}</div>
+        <p class="text-nowrap mb0">任务总数</p>
       </div>
       <div nz-col nzSpan="12">
         <g2-mini-bar height="35" color="#fff" borderWidth="3" [padding]="[36, 30, 30, 30]"></g2-mini-bar>
@@ -61,8 +16,8 @@
   <div nz-col nzXs="24" nzSm="12" nzMd="6" class="mb-md">
     <div nz-row nzType="flex" nzAlign="middle" class="bg-success rounded-md">
       <div nz-col nzSpan="12" class="p-md text-white">
-        <div class="h2 mt0">234,567K</div>
-        <p class="text-nowrap mb0">Website Impressions</p>
+        <div class="h2 mt0">{{homeInfo.completed}}</div>
+        <p class="text-nowrap mb0">任务完成数</p>
       </div>
       <div nz-col nzSpan="12">
         <g2-mini-bar height="35" color="#fff" borderWidth="3" [padding]="[36, 30, 30, 30]"></g2-mini-bar>
@@ -72,8 +27,8 @@
   <div nz-col nzXs="24" nzSm="12" nzMd="6" class="mb-md">
     <div nz-row nzType="flex" nzAlign="middle" class="bg-orange rounded-md">
       <div nz-col nzSpan="12" class="p-md text-white">
-        <div class="h2 mt0">$458,778</div>
-        <p class="text-nowrap mb0">Total Sales</p>
+        <div class="h2 mt0">{{homeInfo.completedRate}}</div>
+        <p class="text-nowrap mb0">任务完成率</p>
       </div>
       <div nz-col nzSpan="12">
         <g2-mini-bar height="35" color="#fff" borderWidth="3" [padding]="[36, 30, 30, 30]"></g2-mini-bar>
@@ -83,13 +38,100 @@
   <div nz-col nzXs="24" nzSm="12" nzMd="6" class="mb-md">
     <div nz-row nzType="flex" nzAlign="middle" class="bg-magenta rounded-md">
       <div nz-col nzSpan="12" class="p-md text-white">
-        <div class="h2 mt0">456</div>
-        <p class="text-nowrap mb0">Support Tickets</p>
+        <div class="h2 mt0">{{homeInfo.expired}}</div>
+        <p class="text-nowrap mb0">任务逾期数</p>
       </div>
       <div nz-col nzSpan="12">
         <g2-mini-bar height="35" color="#fff" borderWidth="3" [padding]="[36, 30, 30, 30]"></g2-mini-bar>
       </div>
     </div>
+  </div>
+</div>
+
+<div nz-row nzGutter="16">
+
+  <!-- <div nz-col nzXs="24" nzMd="12"> -->
+  <div nz-col nzXs="24" nzMd="12">
+    <nz-card [nzBordered]="false" [nzTitle]="title1">
+      <ng-template #title1>
+        <div nz-row>
+          <div nz-col nzSpan="8">
+            任务计划
+          </div>
+          <div nz-col nzSpan="12" nzOffset="4">
+            <nz-range-picker [nzFormat]="shedateFormat" [(ngModel)]="searchAreas" (ngModelChange)="changeTime($event)"></nz-range-picker>
+            <!-- <nz-date-picker [nzFormat]="shedateFormat"></nz-date-picker> -->
+          </div>
+        </div>
+      </ng-template>
+      <!-- <bar height="275" [data]="shopData"></bar> -->
+      <g2-bar height="275" [data]="sheduAreaData"></g2-bar>
+      <!-- <nz-table #nzTable [nzAjaxData]="shopStatistics" [nzIsPagination]="false" [nzShowSizeChanger]="true">
+        <thead nz-thead>
+          <tr>
+            <th nz-th>
+              <span>单位</span>
+            </th>
+            <th nz-th *ngFor="let shops of nzTable.data">
+              <span>{{shops.showCompany}}</span>
+            </th>
+            <th nz-th>
+              <span class="bgcorlor">总数</span>
+            </th>
+          </tr>
+
+        </thead>
+        <tbody nz-tbody>
+          <tr nz-tbody-tr>
+            <td nz-td class="countsty">数量</td>
+            <td nz-td *ngFor="let shop of nzTable.data">{{shop.count}}</td>
+            <td nz-td class="bgcorlor">{{stotal}}</td>
+          </tr>
+        </tbody>
+      </nz-table> -->
+    </nz-card>
+  </div>
+  <div nz-col nzXs="24" nzMd="12">
+    <nz-card [nzTitle]="title2" [nzBordered]="false">
+      <ng-template #title2>
+        <div nz-row>
+          <div nz-col nzSpan="8">
+            任务计划
+          </div>
+          <div nz-col nzSpan="8" nzOffset="8">
+            <nz-radio-group *ngFor="let item of tags" [(ngModel)]="searchMoth" [nzButtonStyle]="'solid'" (ngModelChange)="changeCategory()">
+              <label nz-radio-button [nzValue]="item.value" style="margin-right: 12px;">
+                <span>{{item.text}}</span>
+              </label>
+            </nz-radio-group>
+          </div>
+        </div>
+      </ng-template>
+      <g2-bar height="275" [data]="sheduMothData"></g2-bar>
+      <!-- <nz-table #nzTablew [nzAjaxData]="wechatUserStatistic" [nzIsPagination]="false" [nzShowSizeChanger]="true">
+        <thead nz-thead>
+          <tr>
+            <th nz-th>
+              <span>单位</span>
+            </th>
+            <th nz-th *ngFor="let wechats of nzTablew.data">
+              <span>{{wechats.showCompany}}</span>
+            </th>
+            <th nz-th>
+              <span class="bgcorlor">总数</span>
+            </th>
+          </tr>
+
+        </thead>
+        <tbody nz-tbody>
+          <tr nz-tbody-tr>
+            <td nz-td class="countsty">数量</td>
+            <td nz-td *ngFor="let wechat of nzTablew.data">{{wechat.count}}</td>
+            <td nz-td class="bgcorlor">{{wtotal}}</td>
+          </tr>
+        </tbody>
+      </nz-table> -->
+    </nz-card>
   </div>
 </div>
 
