--- a/ng-admin/src/configs/data-config/data-config.component.html
+++ b/ng-admin/src/configs/data-config/data-config.component.html
@@ -6,7 +6,7 @@
                 <!-- <nz-tag nzMode="checkable" [nzChecked]="true" (nzCheckedChange)="checkChange($event,paramLe.Type=3)">烟农单位</nz-tag>
                 <nz-tag nzMode="checkable" [nzChecked]="true" (nzCheckedChange)="checkChange($event,paramLe.Type=4)">烟农村组</nz-tag>
                 <nz-tag nzMode="checkable" [nzChecked]="true" (nzCheckedChange)="checkChange($event,paramLe.Type=5)">烟叶公共</nz-tag> -->
-                <nz-radio-group style="display: block;" *ngFor="let item of configMetting" [(ngModel)]="paramLe.Type" [nzButtonStyle]="'solid'"
+                <nz-radio-group style="display: block;" *ngFor="let item of configLeaf" [(ngModel)]="paramLe.Type" [nzButtonStyle]="'solid'"
                     (ngModelChange)="checkChangeLeaf()">
                     <label nz-radio-button [nzValue]="item.value" style="margin-top: 10px;">
                         <span>{{item.text}}</span>
@@ -37,9 +37,9 @@
                         </div>
                     </div>
                 </standard-form-row> -->
-                <nz-table #nzTable [nzData]="systemDataLeafs" [nzFrontPagination]="false" [nzTotal]="query.total" [(nzPageIndex)]="query.pageIndex" [nzShowTotal]="totalTemplate"
-                    [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowTotal]="'true'" [nzShowSizeChanger]="true" (nzPageIndexChange)="getAllLeafs()"
-                    (nzPageSizeChange)="getAllLeafs()">
+                <nz-table #nzTable [nzData]="systemDataLeafs" [nzFrontPagination]="false" [nzTotal]="query.total" [(nzPageIndex)]="query.pageIndex"
+                    [nzShowTotal]="totalTemplate" [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowTotal]="'true'"
+                    [nzShowSizeChanger]="true" (nzPageIndexChange)="getAllLeafs()" (nzPageSizeChange)="getAllLeafs()">
                     <thead>
                         <tr>
                             <th>
@@ -77,7 +77,7 @@
     <nz-tab nzTitle="会议管理">
         <div nz-row [nzGutter]="24">
             <div nz-col [nzSpan]="4" class="mb-md">
-                <nz-radio-group style="display: block;" *ngFor="let item of configLeaf" [(ngModel)]="paramMe.Type" [nzButtonStyle]="'solid'"
+                <nz-radio-group style="display: block;" *ngFor="let item of configMetting" [(ngModel)]="paramMe.Type" [nzButtonStyle]="'solid'"
                     (ngModelChange)="checkChangeMetting()">
                     <label nz-radio-button [nzValue]="item.value" style="margin-top: 10px;">
                         <span>{{item.text}}</span>
