导航栏处理；菜单处理；烟农拜访记录；

--- a/ng-admin/src/layout/default-layout.component.html
+++ b/ng-admin/src/layout/default-layout.component.html
@@ -12,7 +12,7 @@
 
     <section class="content">
         <!-- 顶部tab -->
-        <reuse-tab></reuse-tab>
+        <!-- <reuse-tab></reuse-tab> -->
 
         <!-- 内容 -->
         <router-outlet></router-outlet>
