--- a/ng-admin/src/basic-data/organization/organization.component.html
+++ b/ng-admin/src/basic-data/organization/organization.component.html
@@ -113,7 +113,7 @@
                         <td>{{item.position}}</td>
                         <td>{{item.mobile}}</td>
                         <td>
-                            <a (click)="goDetail(item.id)">查看详情</a>
+                            <a (click)="goAreaDetail(item.id)">区县维护</a>
                         </td>
                     </tr>
                 </tbody>
